--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,8 +61,10 @@ jobs:
       - run:
           name: Back-end build
           command: |
-             # Your code here
-             exit 1
+             cd backend
+             npm install
+             npm run build
+             
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
@@ -269,7 +271,7 @@ workflows:
   default:
     jobs:
       - build-frontend
-      #- build-backend
+      - build-backend
       #- test-frontend:
           #requires: [build-frontend]
       #- test-backend:
