--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,9 +43,9 @@ jobs:
       - run:
           name: Build front-end
           command: |
-            cd frontend
-            npm install
-            npm run build
+           cd frontend
+           npm install
+           npm run build
             
       - save_cache:
           paths: [frontend/node_modules]
@@ -271,7 +271,7 @@ workflows:
   default:
     jobs:
       - build-frontend
-      - build-backend
+      #- build-backend
       #- test-frontend:
           #requires: [build-frontend]
       #- test-backend:
