--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,5 +84,7 @@ workflows:
     jobs:
       - build-frontend
       - build-backend
+      - test-frontend:
+          requires: [build-frontend]
       
       
