--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
             
       - save_cache:
           paths: [frontend/node_modules]
-          key: frontend-build
+          key: Frontend-build
   build-backend:
     docker:
       - image: circleci/node:13.8.0
@@ -73,7 +73,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys: [frontend-build]
+          keys: [Frontend-build]
       - run:
           name: frontend Test
           command: |
