--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,7 +92,35 @@ jobs:
           command: |
              cd backend
              npm install oauth-sign
-             npm run test          
+             npm run test  
+  scan-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [frontend-build]
+      - run:
+          name: Scan frontend
+          command: |
+            cd frontend
+            npm update
+            npm audit --audit-level=critical
+  scan-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: Analyze backend
+          command: |
+            cd backend
+            npm update
+            npm audit --audit-level=critical          
+            
+                             
 workflows:
   default:
     jobs:
@@ -101,6 +129,8 @@ workflows:
       - test-frontend:
           requires: [build-frontend]
       - test-backend:
-          requires: [build-backend]    
+          requires: [build-backend]   
+      - scan-backend:
+          requires: [build-backend]     
       
       
