--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -118,7 +118,7 @@ jobs:
           command: |
             cd backend
             npm update
-            npm audit --audit-level=critical          
+            npm audit fix --audit-level=critical --force         
             
                              
 workflows:
