--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,7 +105,7 @@ jobs:
           command: |
             cd frontend
             npm update
-            npm audit --audit-level=critical
+            npm audit fix --audit-level=critical --force
   scan-backend:
     docker:
       - image: circleci/node:13.8.0
@@ -131,6 +131,8 @@ workflows:
       - test-backend:
           requires: [build-backend]   
       - scan-backend:
-          requires: [build-backend]     
+          requires: [build-backend]  
+      - scan-frontend:
+          requires: [build-frontend]       
       
       
