--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,7 +124,19 @@ jobs:
             cd backend
             npm update
             npm audit fix --audit-level=critical --force         
-            
+  deploy-infrastructure:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: Ensure back-end infrastructure exists
+          command: |
+            aws cloudformation deploy \
+              --template-file .circleci/files/backend.yml \
+              --tags project=Udapeople \
+              --stack-name "udapeople-backend-ec2-sdhefhpjpdnadel"  
+                  
                              
 workflows:
   default:
@@ -139,5 +151,10 @@ workflows:
           requires: [build-backend]  
       - scan-frontend:
           requires: [build-frontend]       
+      - deploy-infrastructure:
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+          filters:
+            branches:
+              only: [test-feature-branch]    
       
       
