--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -135,7 +135,8 @@ jobs:
             aws cloudformation deploy \
               --template-file .circleci/files/backend.yml \
               --tags project=Udapeople \
-              --stack-name "udapeople-backend-ec2-sdhefhpjpdnadel"  
+              --stack-name "udapeople-backend-ec2-sdhefhpjpdnadel" \
+              --parameter-overrides ID="udapeople-sdhefhpjpdnadel"  
                   
                              
 workflows:
