--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -154,7 +154,7 @@ jobs:
               --filters "Name=tag:project,Values=Udapeople" \
               --output text >> .circleci/ansible/inventory.txt
              cat .circleci/ansible/inventory.txt
-             ip=$(aws ec2 describe-instances \
+             backend_ip=$(aws ec2 describe-instances \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --filters "Name=tag:project,Values=Udapeople" \
               --output text)
@@ -218,7 +218,42 @@ jobs:
             ANSIBLE_HOST_KEY_CHECKING: false
       - destroy-environment:
           WorkflowID: "${CIRCLE_WORKFLOW_ID:0:7}"                
-                             
+  run-migrations:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: awscli install
+          command: |
+            sudo apt-get -y -qq update
+            sudo apt-get -y -qq install python3
+            sudo apt-get -qq install awscli
+      - run:
+          name: Run migrations
+          command: |
+            cd backend && npm install 
+            npm run build
+            npm run migrations > migration_${CIRCLE_WORKFLOW_ID:0:7}.txt
+      - run:
+          name: Send migration results to memstash
+          command: |
+            cd backend
+            cat migration_${CIRCLE_WORKFLOW_ID:0:7}.txt
+            if grep -q "has been executed successfully" migration_${CIRCLE_WORKFLOW_ID:0:7}.txt
+            then
+              result=1
+            fi
+            curl -H "Content-Type: text/plain" \
+            -H "token: migration_${CIRCLE_WORKFLOW_ID:0:7}" \
+            --request PUT \
+            --data ${result} https://api.memstash.io/values/migration
+            
+            echo ${result}
+      - destroy-environment:
+          WorkflowID: "${CIRCLE_WORKFLOW_ID:0:7}"                            
 workflows:
   default:
     jobs:
@@ -238,6 +273,8 @@ workflows:
             branches:
               only: [master]   
       - configure-infrastructure:
-          requires: [deploy-infrastructure]         
+          requires: [deploy-infrastructure] 
+      - run-migrations:
+          requires: [configure-infrastructure]            
       
       
