--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -162,7 +162,7 @@ jobs:
              curl -H "Content-Type: text/plain" \
                -H "token: ${CIRCLE_WORKFLOW_ID:0:7}" \
                --request PUT \
-               --data ${ip} https://api.memstash.io/values/ip
+               --data ${backend_ip} https://api.memstash.io/values/ip
       - run: 
           name: Install tar, gzip
           command: |
