--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -236,6 +236,7 @@ jobs:
           command: |
             cd backend && npm install 
             npm run build
+            sudo npm i -g pm2
             npm run migrations > migration_${CIRCLE_WORKFLOW_ID:0:7}.txt
       - run:
           name: Send migration results to memstash
