--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -154,15 +154,15 @@ jobs:
               --filters "Name=tag:project,Values=Udapeople" \
               --output text >> .circleci/ansible/inventory.txt
              cat .circleci/ansible/inventory.txt
-             backend_ip=$(aws ec2 describe-instances \
+             BACKEND_IP=$(aws ec2 describe-instances \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --filters "Name=tag:project,Values=Udapeople" \
               --output text)
-              echo ${ip}
+              echo ${BACKEND_IP}
              curl -H "Content-Type: text/plain" \
                -H "token: ${CIRCLE_WORKFLOW_ID:0:7}" \
                --request PUT \
-               --data ${backend_ip} https://api.memstash.io/values/ip
+               --data ${BACKEND_IP} https://api.memstash.io/values/ip
       - run: 
           name: Install tar, gzip
           command: |
@@ -254,7 +254,37 @@ jobs:
             
             echo ${result}
       - destroy-environment:
-          WorkflowID: "${CIRCLE_WORKFLOW_ID:0:7}"                            
+          WorkflowID: "${CIRCLE_WORKFLOW_ID:0:7}"
+  deploy-frontend:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            sudo apt-get -y -qq update
+            sudo apt-get -y -qq install python3
+            sudo apt-get -qq install awscli
+      - run:
+          name: Get backend url
+          command: |
+            BACKEND_IP=$(curl -H "token: ${CIRCLE_WORKFLOW_ID:0:7}" --request GET https://api.memstash.io/values/backendip)
+            cd frontend
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "API_URL=$API_URL" >> .env
+            echo "${API_URL}"
+      - run:
+          name: Deploy frontend objects
+          command: |
+            cd frontend
+             npm install
+            npm run build
+            ls -la 
+            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
+            ls -la 
+            aws s3 sync dist s3://udapeople-sdhefhpjpdnadel/
+      # Here's where you will add some code to rollback on failure                                     
 workflows:
   default:
     jobs:
