--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -306,6 +306,9 @@ workflows:
       - configure-infrastructure:
           requires: [deploy-infrastructure] 
       - run-migrations:
-          requires: [configure-infrastructure]            
+          requires: [configure-infrastructure]   
+      - deploy-frontend:
+          requires: [run-migrations]
+             
       
       
