--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -171,8 +171,8 @@ jobs:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
-      - destroy-environment:
-          WorkflowID: "${CIRCLE_WORKFLOW_ID:0:7}"      
+      #- destroy-environment:
+          #WorkflowID: "${CIRCLE_WORKFLOW_ID:0:7}"      
   configure-infrastructure:
     docker:
       - image: python:3.7-alpine3.11
@@ -216,8 +216,8 @@ jobs:
             ansible-playbook -i inventory.txt configure-server.yml
           environment:
             ANSIBLE_HOST_KEY_CHECKING: false
-      - destroy-environment:
-          WorkflowID: "${CIRCLE_WORKFLOW_ID:0:7}"                
+      #- destroy-environment:
+          #WorkflowID: "${CIRCLE_WORKFLOW_ID:0:7}"                
   run-migrations:
     docker:
       - image: circleci/node:13.8.0
@@ -253,8 +253,8 @@ jobs:
             --data ${result} https://api.memstash.io/values/migration
             
             echo ${result}
-      - destroy-environment:
-          WorkflowID: "${CIRCLE_WORKFLOW_ID:0:7}"
+      #- destroy-environment:
+          #WorkflowID: "${CIRCLE_WORKFLOW_ID:0:7}"
   deploy-frontend:
     docker:
       - image: amazon/aws-cli
