--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -257,7 +257,7 @@ jobs:
           WorkflowID: "${CIRCLE_WORKFLOW_ID:0:7}"
   deploy-frontend:
     docker:
-      - image: amazon/aws-cli
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - run:
@@ -278,7 +278,7 @@ jobs:
           name: Deploy frontend objects
           command: |
             cd frontend
-             npm install
+            npm install
             npm run build
             ls -la 
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
