--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -346,6 +346,7 @@ workflows:
           requires: [configure-infrastructure]   
       - deploy-frontend:
           requires: [run-migrations]
-             
+      - deploy-backend:
+          requires: [run-migrations]       
       
       
