--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -342,11 +342,11 @@ jobs:
           name: Frontend smoke test.
           command: |
              if curl -s "http://udapeople-sdhefhpjpdnadel.s3-website-us-east-1.amazonaws.com" | grep "Welcome"
-            then
-              return 0
-            else
+             then
+             return 0
+             else
               return 1
-            fi
+             fi
       # Here's where you will add some code to rollback on failure                                            
 workflows:
   default:
@@ -374,5 +374,6 @@ workflows:
           requires: [run-migrations]
       - deploy-backend:
           requires: [run-migrations]       
-      
+      - smoke-test:
+          requires: [deploy-backend, deploy-frontend]
       
