--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -332,12 +332,19 @@ jobs:
           command: |
              apk add --update curl nodejs npm
              pip install awscli
-      - run:
-          name: Get backend url and smoke test
+       - run:
+          name: Get backend url
           command: |
-            BACKEND_IP=$(curl -H "token: ${CIRCLE_WORKFLOW_ID:0:7}" --request GET https://api.memstash.io/values/backendip)
-            echo ${BACKEND_IP}
-            curl "http://${BACKEND_IP}:3030/api/status"
+            export BACKEND_URL=$(sed -n 2p .circleci/ansible/inventory.txt)
+      - run:
+          name: Backend smoke test
+          command: |
+            if curl -s https://${BACKEND_URL}:3030/api/status
+            then
+            return 1
+            else
+            return 0
+            fi
       - run:
           name: Frontend smoke test.
           command: |
