--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -21,6 +21,14 @@ Resources:
           FromPort: 3030
           ToPort: 3030
           CidrIp: 0.0.0.0/0
+        - IpProtocol: http
+          FromPort: 80
+          ToPort: 80
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: https
+          FromPort: 443
+          ToPort: 443
+          CidrIp: 0.0.0.0/0
 
   EC2Instance:
     Type: AWS::EC2::Instance
