--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,6 +63,7 @@ jobs:
              cd backend
              npm install
              npm run build
+             npm audit fix
              
       - save_cache:
           paths: [backend/node_modules]
