--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,17 +1,29 @@
-- name: Copy backend files
+---
+- name: "Creates directory"
+  file:
+    path: /home/ubuntu/backend
+    state: directory
+    
+- name: "Move backend files to remote server."
   become: true
   copy:
-    src: backend.tar.gz
-    dest: /home/ubuntu/backend.tar.gz
+    src: /root/project/backend
+    dest: /home/ubuntu
 
-- name: Start PM2
+- name: "Install dependencies"
   shell: |
-    cd /home/ubuntu/
-    tar xzvf backend.tar.gz
-    # mv home/circleci/project/backend .
-    cd backend
-    sudo npm install -g npm@latest
-    sudo npm install -g webpack-dev-server
-    sudo npm install
-    sudo npm run build
-    sudo pm2 start npm --name backend -- start
+    cd /home/ubuntu/backend   
+    ls -la 
+    npm install
+    
+- name: "build package"
+  become: true
+  shell: |
+    cd /home/ubuntu/backend
+    npm run build
+- name: "run server"
+  become: true
+  shell: |
+    cd /home/ubuntu/backend
+    pm2 start npm -- run "start:dev"
+    pm2 ls
