--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -39,7 +39,7 @@ Resources:
       KeyName: udacity # If you use another key pair name, you should change this value to match.
       # If this ami id is not available for you, you can find another (https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/finding-an-ami.html)
       # Ubuntu 18 or higher works fine
-      ImageId: ami-0e4d932065378fd3d
+      ImageId: ami-0bb5a904861ec247f
       Tags:
         - Key: Name
-          Value: !Sub udapeople-backend-ec2-${ID}
+          Value: !Sub backend-${ID}
