--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,8 +123,12 @@ jobs:
           name: Analyze backend
           command: |
             cd backend
-            npm update
-            npm audit fix --audit-level=critical --force         
+           sudo npm install npm@latest -g
+           sudo npm i --save-dev standard-version
+           sudo npm i semver
+           sudo npm audit
+           sudo npm audit fix --force
+           sudo npm audit        
   deploy-infrastructure:
     docker:
       - image: amazon/aws-cli
