--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -19,11 +19,11 @@
     src: /root/project/backend
     dest: /home/ubuntu
 
-- name: "Install dependencies"
-  shell: |
-    cd /home/ubuntu/backend   
-    ls -la 
-    npm install
+- name: "install npm packages"
+  become: true
+  command: npm install
+  args:
+    chdir: /home/ubuntu/backend
     
 - name: "build package"
   become: true
