--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -18,7 +18,11 @@
   copy:
     src: /root/project/backend
     dest: /home/ubuntu
-
+- name: "Install dependencies"
+  shell: |
+    cd /home/ubuntu/backend   
+    ls -la 
+    npm install
 - name: "install npm packages"
   become: true
   command: npm install
