--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -1,17 +1,14 @@
 Description: >
   UdaPeople backend stack.
 
-Parameters:
-  ID:
-    Description: Unique identifier.
-    Type: String
+
 
 Resources:
   InstanceSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupName: !Sub UdaPeople-${ID}
-      GroupDescription: Allow port 22 and port 3030.
+      GroupName: udapeople-sdhefhpjpdnadel
+      GroupDescription: Allow the following ports - 22, 3030, 9100, 9090, 9093.
       SecurityGroupIngress:
         - IpProtocol: tcp
           FromPort: 22
@@ -22,13 +19,25 @@ Resources:
           ToPort: 3030
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
+          FromPort: 9100
+          ToPort: 9100
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 9093
+          ToPort: 9093
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 9090
+          ToPort: 9090
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
           FromPort: 80
           ToPort: 80
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
           FromPort: 443
           ToPort: 443
-          CidrIp: 0.0.0.0/0
+          CidrIp: 0.0.0.0/0  
 
   EC2Instance:
     Type: AWS::EC2::Instance
@@ -39,7 +48,7 @@ Resources:
       KeyName: udacity # If you use another key pair name, you should change this value to match.
       # If this ami id is not available for you, you can find another (https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/finding-an-ami.html)
       # Ubuntu 18 or higher works fine
-      ImageId: ami-0bb5a904861ec247f
+      ImageId: ami-0e4d932065378fd3d
       Tags:
         - Key: Name
-          Value: !Sub backend-${ID}
+          Value: udapeople-backend-ec2-sdhefhpjpdnadel
