--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,13 +1,4 @@
 ---
-- name: "upgrade packages."
-  become: true
-  apt:
-    upgrade: "yes"
-- name: "install dependencies."
-  become: true
-  apt:
-    name: ["nodejs", "npm"]
-    update_cache: yes
 - name: "Creates directory"
   file:
     path: /home/ubuntu/backend
@@ -18,12 +9,12 @@
   copy:
     src: /root/project/backend
     dest: /home/ubuntu
-    
-- name: "install npm packages"
-  become: true
-  command: npm install
-  args:
-    chdir: /home/ubuntu/backend
+
+- name: "Install dependencies"
+  shell: |
+    cd /home/ubuntu/backend   
+    ls -la 
+    npm install
     
 - name: "build package"
   become: true
