--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -14,7 +14,7 @@
   shell: |
     cd /home/ubuntu/backend   
     ls -la 
-    npm install -g npm@latest
+    npm install
     
 - name: "build package"
   become: true
