--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -286,7 +286,7 @@ jobs:
             ls -la 
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             ls -la 
-            aws s3 sync dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}/
+            aws s3 sync dist s3://udapeople-sdhefhpjpdnadel/
       # Here's where you will add some code to rollback on failure   
   deploy-backend:
     docker:
