--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -350,7 +350,7 @@ jobs:
       - run:
           name: Frontend smoke test.
           command: |
-             if curl -s "http://udapeople-sdhefhpjpdnade.s3-website-us-east-1.amazonaws.com" | grep "Welcome"
+             if curl -s "http://udapeople-sdhefhpjpdnadel.s3-website-us-east-1.amazonaws.com" | grep "Welcome"
              then
              return 0
              else
@@ -358,7 +358,35 @@ jobs:
              fi
       - destroy-environment:
           WorkflowID: ${CIRCLE_WORKFLOW_ID:0:7}
-      - revert-migrations                                            
+      - revert-migrations
+  cloudfront-update:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            yum -y install tar gzip
+      - run:
+          name: Getting old workflow ID 
+          command: |
+            WorkflowID=$(aws cloudformation \
+              list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+              --no-paginate --output text)
+            curl -H "Content-Type: text/plain" -H "token:${CIRCLE_WORKFLOW_ID} " --request PUT --data "$WorkflowID" https://api.memstash.io/values/WorkflowID    
+      - run:
+          name: Update cloudfront distribution
+          working_directory: ./.circleci/files
+          command: |
+                aws cloudformation deploy \
+                --template-file cloudfront.yml \
+                --stack-name cloudfront \
+                --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID}" 
+     
+      - destroy-environment:
+          WorkflowID: ${CIRCLE_WORKFLOW_ID:0:7}
+      - revert-migrations                                                
 workflows:
   default:
     jobs:
@@ -387,4 +415,5 @@ workflows:
           requires: [run-migrations]       
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
-      
+      - cloudfront-update:
+          requires: [smoke-test]
