--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -386,7 +386,44 @@ jobs:
      
       - destroy-environment:
           WorkflowID: ${CIRCLE_WORKFLOW_ID:0:7}
-      - revert-migrations                                                
+      - revert-migrations
+  cleanup:
+      docker:
+        - image: amazon/aws-cli
+
+      steps:
+        - checkout
+        - run:
+            name: Install dependencies
+            command: |
+              yum install gzip tar python3-pip curl -y
+              curl -sL https://rpm.nodesource.com/setup_10.x | bash -
+              yum install nodejs npm -y
+              npm install       
+        - run:
+            name: Clean Up
+            command: |
+
+              export OldWorkflowID=$(aws cloudformation \
+                list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+                --no-paginate --output text)
+              
+              CurrentWorkflowID=${CIRCLE_WORKFLOW_ID}
+              
+              echo Old Workflow Id: "${OldWorkflowID}"
+              echo CurrentWorkflowID: "${CurrentWorkflowID}" 
+             
+              if [[ "${CurrentWorkflowID}" != "${OldWorkflowID}" ]]
+              then
+                aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+                aws cloudformation delete-stack --stack-name "backend-${OldWorkflowID}"
+                aws cloudformation delete-stack --stack-name "frontend-${OldWorkflowID}"
+              else
+               echo "SAME"
+              fi
+        - destroy-environment:
+            WorkflowID: ${CIRCLE_WORKFLOW_ID:0:7}
+        - revert-migrations                                                    
 workflows:
   default:
     jobs:
@@ -417,3 +454,5 @@ workflows:
           requires: [deploy-backend, deploy-frontend]
       - cloudfront-update:
           requires: [smoke-test]
+      - cleanup:
+          requires: [cloudfront-update]     
